Added code to assist explaining the redirector issues
Task-Url: https://bitbucket.org/pughlab/tracker-java-restlet/issue/8/

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
 			<version>${restlet.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.restlet.jee</groupId>
 			<artifactId>org.restlet.ext.spring</artifactId>
 			<version>${restlet.version}</version>
@@ -47,7 +57,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -94,7 +104,7 @@
 				<configuration>
 					<war>${project.build.directory}/${project.build.finalName}.war</war>
 					<webApp>
-						<contextPath>/demo</contextPath>
+						<contextPath>/</contextPath>
 					</webApp>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
